--- a/assets_src/config/db/cores.yaml
+++ b/assets_src/config/db/cores.yaml
@@ -7,7 +7,9 @@ cores:
     options:
       parallel-n64-gfxplugin: angrylion
       parallel-n64-pak1: rumble
+    multithreadedLoading: false
   - id: swanstation
+    multithreadedLoading: false
   - id: mgba
   - id: gambatte
   - id: mednafen_gba
@@ -19,16 +21,20 @@ cores:
     options:
       kronos_videocoretype: opengl_cs
   - id: mednafen_saturn
+    multithreadedLoading: false
   - id: pcsx2
     options:
       pcsx2_renderer: D3D11
     blockedExtensions: [cue]
+    multithreadedLoading: false
   - id: dolphin
     options:
       dolphin_renderer: Hardware
+    multithreadedLoading: false
   - id: mupen64plus_next
     options:
       mupen64plus-pak1: rumble
+    multithreadedLoading: false
   - id: stella
   - id: mesen
   - id: nestopia
